Switched Spinner completely to the protocol. Unify textLimit reset for Text, Spinner, Combo and CCombo - bug 351945: Migrate widget LCAs to write JSON responses https://bugs.eclipse.org/bugs/show_bug.cgi?id=351945