@@ -1,13 +1,13 @@
 /*******************************************************************************
- * Copyright (c) 2002, 2011 Innoopract Informationssysteme GmbH.
+ * Copyright (c) 2002, 2011 Innoopract Informationssysteme GmbH and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *     Innoopract Informationssysteme GmbH - initial API and implementation
- *     EclipseSource - ongoing development
+ *    Innoopract Informationssysteme GmbH - initial API and implementation
+ *    EclipseSource - ongoing development
  ******************************************************************************/
 package org.eclipse.swt.internal.widgets.spinnerkit;
 
@@ -15,58 +15,54 @@ import java.io.IOException;
 import java.text.DecimalFormatSymbols;
 
 import org.eclipse.rwt.RWT;
-import org.eclipse.rwt.internal.lifecycle.JSConst;
+import org.eclipse.rwt.internal.protocol.ClientObjectFactory;
+import org.eclipse.rwt.internal.protocol.IClientObject;
 import org.eclipse.rwt.internal.util.NumberFormatUtil;
 import org.eclipse.rwt.lifecycle.*;
-import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.*;
 import org.eclipse.swt.widgets.*;
 
 
 public final class SpinnerLCA extends AbstractWidgetLCA {
 
-  private static final String QX_TYPE = "org.eclipse.swt.widgets.Spinner";
+  private static final String TYPE = "rwt.widgets.Spinner";
 
   // Property names for preserveValues
-  static final String PROP_SELECTION = "selection";
-  static final String PROP_MAXIMUM = "maximum";
   static final String PROP_MINIMUM = "minimum";
+  static final String PROP_MAXIMUM = "maximum";
+  static final String PROP_SELECTION = "selection";
   static final String PROP_DIGITS = "digits";
   static final String PROP_INCREMENT = "increment";
   static final String PROP_PAGE_INCREMENT = "pageIncrement";
-  static final String PROP_MODIFY_LISTENER = "modifyListener";
-  static final String PROP_SELECTION_LISTENER = "selectionListener";
   static final String PROP_TEXT_LIMIT = "textLimit";
   static final String PROP_DECIMAL_SEPARATOR = "decimalSeparator";
+  static final String PROP_MODIFY_LISTENER = "modifyListener";
+  static final String PROP_SELECTION_LISTENER = "selectionListener";
 
   // Default values
-  private static final Integer DEFAULT_SELECTION = new Integer( 0 );
-  private static final Integer DEFAULT_MAXIMUM = new Integer( 100 );
   private static final Integer DEFAULT_MINIMUM = new Integer( 0 );
+  private static final Integer DEFAULT_MAXIMUM = new Integer( 100 );
+  private static final Integer DEFAULT_SELECTION = new Integer( 0 );
   private static final Integer DEFAULT_DIGITS = new Integer( 0 );
-  private static final Integer DEFAULT_PAGE_INCREMENT = new Integer( 10 );
   private static final Integer DEFAULT_INCREMENT = new Integer( 1 );
-  private static final Integer DEFAULT_TEXT_LIMIT
-    = new Integer( Spinner.LIMIT );
+  private static final Integer DEFAULT_PAGE_INCREMENT = new Integer( 10 );
   private static final String DEFAULT_DECIMAL_SEPARATOR = ".";
 
-  public void preserveValues( final Widget widget ) {
+  public void preserveValues( Widget widget ) {
     Spinner spinner = ( Spinner )widget;
     ControlLCAUtil.preserveValues( spinner );
     IWidgetAdapter adapter = WidgetUtil.getAdapter( widget );
-    adapter.preserve( PROP_SELECTION, new Integer( spinner.getSelection() ) );
     adapter.preserve( PROP_MINIMUM, new Integer( spinner.getMinimum() ) );
     adapter.preserve( PROP_MAXIMUM, new Integer( spinner.getMaximum() ) );
+    adapter.preserve( PROP_SELECTION, new Integer( spinner.getSelection() ) );
     adapter.preserve( PROP_DIGITS, new Integer( spinner.getDigits() ) );
     adapter.preserve( PROP_INCREMENT, new Integer( spinner.getIncrement() ) );
-    adapter.preserve( PROP_PAGE_INCREMENT,
-                      new Integer( spinner.getPageIncrement() ) );
-    adapter.preserve( PROP_MODIFY_LISTENER,
-                      Boolean.valueOf( ModifyEvent.hasListener( spinner ) ) );
+    adapter.preserve( PROP_PAGE_INCREMENT, new Integer( spinner.getPageIncrement() ) );
+    adapter.preserve( PROP_TEXT_LIMIT, getTextLimit( spinner ) );
+    adapter.preserve( PROP_DECIMAL_SEPARATOR, getDecimalSeparator() );
+    adapter.preserve( PROP_MODIFY_LISTENER, Boolean.valueOf( ModifyEvent.hasListener( spinner ) ) );
     adapter.preserve( PROP_SELECTION_LISTENER,
                       Boolean.valueOf( SelectionEvent.hasListener( spinner ) ) );
-    adapter.preserve( PROP_TEXT_LIMIT, new Integer( spinner.getTextLimit() ) );
-    adapter.preserve( PROP_DECIMAL_SEPARATOR, getDecimalSeparator() );
     WidgetLCAUtil.preserveCustomVariant( spinner );
   }
 
@@ -74,7 +70,7 @@ public final class SpinnerLCA extends AbstractWidgetLCA {
    * readData does not explicitly handle modifyEvents. They are fired implicitly
    * by updating the selection property.
    */
-  public void readData( final Widget widget ) {
+  public void readData( Widget widget ) {
     Spinner spinner = ( Spinner )widget;
     String value = WidgetLCAUtil.readPropertyValue( widget, "selection" );
     if( value != null ) {
@@ -87,143 +83,118 @@ public final class SpinnerLCA extends AbstractWidgetLCA {
     WidgetLCAUtil.processHelp( spinner );
   }
 
-  public void renderInitialization( final Widget widget ) throws IOException {
+  public void renderInitialization( Widget widget ) throws IOException {
     Spinner spinner = ( Spinner )widget;
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    writer.newWidget( QX_TYPE );
-    ControlLCAUtil.writeStyleFlags( spinner );
-    writeReadOnly( spinner );
-    writeWrap( spinner );
+    IClientObject clientObject = ClientObjectFactory.getForWidget( spinner );
+    clientObject.create( TYPE );
+    clientObject.setProperty( "parent", WidgetUtil.getId( spinner.getParent() ) );
+    clientObject.setProperty( "style", WidgetLCAUtil.getStyles( spinner ) );
   }
 
-  public void renderChanges( final Widget widget ) throws IOException {
+  public void renderChanges( Widget widget ) throws IOException {
     Spinner spinner = ( Spinner )widget;
-    ControlLCAUtil.writeChanges( spinner );
-    writeMinMaxSelection( spinner );
-    writeValues( spinner );
-    writeTextLimit( spinner );
-    writeModifyListener( spinner );
-    writeSelectionListener( spinner );
-    writeDecimalSeparator( spinner );
-    WidgetLCAUtil.writeCustomVariant( spinner );
+    ControlLCAUtil.renderChanges( spinner );
+    WidgetLCAUtil.renderCustomVariant( spinner );
+    renderMinimum( spinner );
+    renderMaximum( spinner );
+    renderSelection( spinner );
+    renderDigits( spinner );
+    renderIncrement( spinner );
+    renderPageIncrement( spinner );
+    renderTextLimit( spinner );
+    renderDecimalSeparator( spinner );
+    renderListenModify( spinner );
+    renderListenSelection( spinner );
   }
 
-  public void renderDispose( final Widget widget ) throws IOException {
-    JSWriter writer = JSWriter.getWriterFor( widget );
-    writer.dispose();
+  public void renderDispose( Widget widget ) throws IOException {
+    ClientObjectFactory.getForWidget( widget ).destroy();
   }
 
   //////////////////////////////////////
   // Helping methods to write JavaScript
 
-  private static void writeValues( final Spinner spinner ) throws IOException {
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    writer.set( PROP_DIGITS,
-                "digits",
-                new Integer( spinner.getDigits() ),
-                DEFAULT_DIGITS );
-    writer.set( PROP_INCREMENT,
-                "incrementAmount",
-                new Integer( spinner.getIncrement() ),
-                DEFAULT_INCREMENT );
-    writer.set( PROP_INCREMENT,
-                "wheelIncrementAmount",
-                new Integer( spinner.getIncrement() ),
-                DEFAULT_INCREMENT );
-    writer.set( PROP_PAGE_INCREMENT,
-                "pageIncrementAmount",
-                new Integer( spinner.getPageIncrement() ),
-                DEFAULT_PAGE_INCREMENT );
+  private static void renderMinimum( Spinner spinner ) {
+    renderProperty( spinner, PROP_MINIMUM, new Integer( spinner.getMinimum() ), DEFAULT_MINIMUM );
   }
 
-  // [if] Spinner#setValues allows minimum, maximum and selection to be set in
-  // one hop. In case of not crossed ranges ( for example new min > old max ), a
-  // javascript error appears if we set them one by one.
-  private static void writeMinMaxSelection( final Spinner spinner )
-    throws IOException
-  {
-    Integer newMin = new Integer( spinner.getMinimum() );
-    Integer newMax = new Integer( spinner.getMaximum() );
-    Integer newSel = new Integer( spinner.getSelection() );
-    boolean minChanged = WidgetLCAUtil.hasChanged( spinner,
-                                                   PROP_MINIMUM,
-                                                   newMin,
-                                                   DEFAULT_MINIMUM );
-    boolean maxChanged = WidgetLCAUtil.hasChanged( spinner,
-                                                   PROP_MAXIMUM,
-                                                   newMax,
-                                                   DEFAULT_MAXIMUM );
-    boolean selChanged = WidgetLCAUtil.hasChanged( spinner,
-                                                   PROP_SELECTION,
-                                                   newSel,
-                                                   DEFAULT_SELECTION );
-    if( minChanged || maxChanged || selChanged ) {
-      JSWriter writer = JSWriter.getWriterFor( spinner );
-      Integer[] args = new Integer[] {
-        newMin, newMax, newSel
-      };
-      writer.call( "setMinMaxSelection", args );
-    }
+  private static void renderMaximum( Spinner spinner ) {
+    renderProperty( spinner, PROP_MAXIMUM, new Integer( spinner.getMaximum() ), DEFAULT_MAXIMUM );
   }
 
-  private static void writeTextLimit( final Spinner spinner ) throws IOException
-  {
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    Integer newValue = new Integer( spinner.getTextLimit() );
-    Integer defValue = DEFAULT_TEXT_LIMIT;
-    String prop = PROP_TEXT_LIMIT;
-    if( WidgetLCAUtil.hasChanged( spinner, prop, newValue, defValue ) ) {
-      // Negative values are treated as 'no limit' which is achieved by passing
-      // null to the client-side maxLength property
-      if( newValue.intValue() < 0 ) {
-        newValue = null;
-      }
-      writer.set( "maxLength", newValue );
-    }
+  private static void renderSelection( Spinner spinner ) {
+    Integer defValue = DEFAULT_SELECTION;
+    renderProperty( spinner, PROP_SELECTION, new Integer( spinner.getSelection() ), defValue );
   }
 
-  private static void writeReadOnly( final Spinner spinner ) throws IOException
-  {
-    boolean readOnly = ( spinner.getStyle() & SWT.READ_ONLY ) != 0;
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    writer.set( JSConst.QX_FIELD_EDITABLE, !readOnly );
+  private static void renderDigits( Spinner spinner ) {
+    renderProperty( spinner, PROP_DIGITS, new Integer( spinner.getDigits() ), DEFAULT_DIGITS );
   }
 
-  private static void writeWrap( final Spinner spinner ) throws IOException {
-    if( ( spinner.getStyle() & SWT.WRAP ) != 0 ) {
-      JSWriter writer = JSWriter.getWriterFor( spinner );
-      writer.set( "wrap", true );
-    }
+  private static void renderIncrement( Spinner spinner ) {
+    Integer defValue = DEFAULT_INCREMENT;
+    renderProperty( spinner, PROP_INCREMENT, new Integer( spinner.getIncrement() ), defValue );
   }
 
-  private static void writeModifyListener( final Spinner spinner )
-    throws IOException
-  {
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    String prop = PROP_MODIFY_LISTENER;
-    Boolean newValue = Boolean.valueOf( ModifyEvent.hasListener( spinner ) );
-    Boolean defValue = Boolean.FALSE;
-    writer.set( prop, "hasModifyListener", newValue, defValue );
+  private static void renderPageIncrement( Spinner spinner ) {
+    String prop = PROP_PAGE_INCREMENT;
+    Integer defValue = DEFAULT_PAGE_INCREMENT;
+    renderProperty( spinner, prop, new Integer( spinner.getPageIncrement() ), defValue );
   }
 
-  private static void writeSelectionListener( final Spinner spinner )
-    throws IOException
-  {
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    String prop = PROP_SELECTION_LISTENER;
-    Boolean newValue = Boolean.valueOf( SelectionEvent.hasListener( spinner ) );
-    Boolean defValue = Boolean.FALSE;
-    writer.set( prop, "hasSelectionListener", newValue, defValue );
+  private static void renderTextLimit( Spinner spinner ) {
+    renderProperty( spinner, PROP_TEXT_LIMIT, getTextLimit( spinner ), null );
   }
 
-  private static void writeDecimalSeparator( final Spinner spinner )
-    throws IOException
-  {
-    JSWriter writer = JSWriter.getWriterFor( spinner );
-    String prop = PROP_DECIMAL_SEPARATOR;
-    String newValue = getDecimalSeparator();
+  private static void renderDecimalSeparator( Spinner spinner ) {
     String defValue = DEFAULT_DECIMAL_SEPARATOR;
-    writer.set( prop, "decimalSeparator", newValue, defValue );
+    renderProperty( spinner, PROP_DECIMAL_SEPARATOR, getDecimalSeparator(), defValue );
+  }
+
+  private static void renderListenModify( Spinner spinner ) {
+    Boolean newValue = Boolean.valueOf( ModifyEvent.hasListener( spinner ) );
+    if( WidgetLCAUtil.hasChanged( spinner, PROP_MODIFY_LISTENER, newValue, Boolean.FALSE ) ) {
+      renderListen( spinner, "modify", newValue.booleanValue() );
+    }
+  }
+
+  private static void renderListenSelection( Spinner spinner ) {
+    Boolean newValue = Boolean.valueOf( SelectionEvent.hasListener( spinner ) );
+    if( WidgetLCAUtil.hasChanged( spinner, PROP_SELECTION_LISTENER, newValue, Boolean.FALSE ) ) {
+      renderListen( spinner, "selection", newValue.booleanValue() );
+    }
+  }
+
+  //////////////////
+  // Helping methods
+
+  private static void renderProperty( Spinner spinner,
+                                      String property,
+                                      Object newValue,
+                                      Object defValue )
+  {
+    if( WidgetLCAUtil.hasChanged( spinner, property, newValue, defValue ) ) {
+      IClientObject clientObject = ClientObjectFactory.getForWidget( spinner );
+      clientObject.setProperty( property, newValue );
+    }
+  }
+
+  private static void renderListen( Spinner spinner, String eventType, boolean hasListener ) {
+    IClientObject clientObject = ClientObjectFactory.getForWidget( spinner );
+    if( hasListener ) {
+      clientObject.addListener( eventType );
+    } else {
+      clientObject.removeListener( eventType );
+    }
+  }
+
+  private static Integer getTextLimit( Spinner spinner ) {
+    Integer result = null;
+    int textLimit = spinner.getTextLimit();
+    if( textLimit > 0 && textLimit != Spinner.LIMIT ) {
+      result = new Integer( textLimit );
+    }
+    return result;
   }
 
   private static String getDecimalSeparator() {
